--- a/.github/workflows/upload_pypi.yml
+++ b/.github/workflows/upload_pypi.yml
@@ -1,10 +1,10 @@
-name: Create Release
+name: Upload to PyPi
 
 on:
-    release:
-        types:
-            [created]
-            # Allows you to run this workflow manually from the Actions tab
+    # release:
+    #     types:
+    #         [created]
+    #         # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
 
 jobs:
