--- a/.gitignore
+++ b/.gitignore
@@ -159,10 +159,10 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-
 # Vim swap files
 *.swp
 .*.swp
 *~
 .*~
 .vscode/settings.json
+poetry.lock
