FIX: reject of oauth

--- a/.github/workflows/upload_pypi.yml
+++ b/.github/workflows/upload_pypi.yml
@@ -1,7 +1,8 @@
 name: Upload to PyPi
 
 on:
-    push
+    push:
+        branches: [pypi-upload]
     release:
         types:
             [created]
