fix linting errors

--- a/.github/workflows/upload_pypi.yml
+++ b/.github/workflows/upload_pypi.yml
@@ -1,3 +1,4 @@
+---
 name: Upload to PyPi
 
 on:
@@ -34,7 +35,8 @@ jobs:
               if: steps.cache-poetry.outputs.cache-hit != 'true'
               run: |
                   curl -sSL https://install.python-poetry.org | python3 -
-            # Poetry still needs to be re-prepended to the PATH on each run, since
+            # Poetry still needs to be re-prepended
+            # to the PATH on each run, since
             # PATH does not persist between runs.
             - name: Add Poetry to $PATH
               run: |
