📦 NEW: update deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ keywords = [
     "python"
 ]
 packages = [
-    { include = "bubblewrap", from = "src" },
+    { include = "", from = "src" },
 ]
 
 
